More infrastructure changes, mostly concerning performance: - Tracks are now fetched via the 5-threaded approach as well, further improving performance - Database insertions are now done in batch, rather than individually - Crawls are now done only once per hour (as opposed to every 30 minutes) - Removed UserOptions (i.e. intelligentAppearsOnSearch and circularPlaylistFitting are now always enabled) - Current User is now fetched only once and then indefinitely kept in memory - Added missing template files - Code cleanup and typos